Add tests, github workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,9 @@ ntree = "nginx_conf_tool.tree:tree"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "ruff>=0.9.7",
+]
